# Reelify

./: .gitignore  README.md  ROADMAP.md  TODO.md  progress.txt  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md  handoff.md
src/reelify/: analyser.py  classifier.py  cli.py  encoder.py  enricher.py  keyframes.py  pipeline.py  speed_map.py  subtitles.py
src/reelify/vision/: __init__.py  gemini.py  local.py  provider.py
tests/: test_analyser.py  test_classifier.py  test_cli.py  test_encoder.py  test_enricher.py  test_keyframes.py  test_speed_map.py  test_vision_provider.py
